@@ -3,11 +3,14 @@ package org.wargamer2010.signshop.operations;
 import org.bukkit.Location;
 import org.bukkit.block.Block;
 import org.wargamer2010.signshop.SignShop;
-import org.wargamer2010.signshop.configuration.Storage;
+import org.wargamer2010.signshop.data.Storage;
 import org.wargamer2010.signshop.util.signshopUtil;
 
 import java.util.List;
 
+/**
+ * Shop operation that registers restricted signs to limit shop access.
+ */
 public class RestrictedSign implements SignShopOperation {
     @Override
     public Boolean setupOperation(SignShopArguments ssArgs) {
@@ -25,7 +28,7 @@ public class RestrictedSign implements SignShopOperation {
         } else {
             StringBuilder restrictedshops = new StringBuilder();
             boolean first = true;
-            Block bLast = shops.get(shops.size()-1);
+            Block bLast = shops.getLast();
             for(Block bTemp : shops) {
                 Location loc = bTemp.getLocation();
                 if(first) first = false;
