@@ -6,12 +6,15 @@ import org.bukkit.block.Sign;
 import org.bukkit.block.sign.Side;
 import org.wargamer2010.signshop.Seller;
 import org.wargamer2010.signshop.SignShop;
-import org.wargamer2010.signshop.configuration.Storage;
+import org.wargamer2010.signshop.data.Storage;
 import org.wargamer2010.signshop.util.signshopUtil;
 
 import java.util.LinkedList;
 import java.util.List;
 
+/**
+ * Shop operation that registers share signs for profit splitting among multiple players.
+ */
 public class ShareSign implements SignShopOperation {
     @Override
     public Boolean setupOperation(SignShopArguments ssArgs) {
@@ -41,7 +44,7 @@ public class ShareSign implements SignShopOperation {
         } else {
             StringBuilder profitshops = new StringBuilder();
             boolean first = true;
-            Block bLast = shops.get(shops.size()-1);
+            Block bLast = shops.getLast();
             for(Block bTemp : shops) {
                 Location loc = bTemp.getLocation();
                 if(first) first = false;
@@ -58,10 +61,10 @@ public class ShareSign implements SignShopOperation {
             if(!signshopUtil.lineIsEmpty(lines[2])) names.add(lines[2]);
             names.add("the Shop's respective owners");
             first = true;
-            String sLast = names.get(names.size()-1);
+            String sLast = names.getLast();
             for(String sTemp : names) {
                 if(first) first = false;
-                else if (!sLast.equals(sTemp)) profits.append(", ");//TODO fix this
+                else if (!sLast.equals(sTemp)) profits.append(", ");
                 else if (sLast.equals(sTemp)) profits.append(" and ");
                 profits.append(sTemp);
             }
