@@ -19,7 +19,7 @@ import org.wargamer2010.signshop.SignShop;
 import org.wargamer2010.signshop.Vault;
 import org.wargamer2010.signshop.configuration.LinkableMaterial;
 import org.wargamer2010.signshop.configuration.SignShopConfig;
-import org.wargamer2010.signshop.configuration.Storage;
+import org.wargamer2010.signshop.data.Storage;
 import org.wargamer2010.signshop.events.*;
 import org.wargamer2010.signshop.operations.SignShopArguments;
 import org.wargamer2010.signshop.operations.SignShopOperation;
@@ -27,9 +27,45 @@ import org.wargamer2010.signshop.operations.SignShopOperationListItem;
 import org.wargamer2010.signshop.player.PlayerCache;
 import org.wargamer2010.signshop.player.SignShopPlayer;
 import org.wargamer2010.signshop.specialops.SignShopSpecialOp;
+import org.wargamer2010.signshop.util.ItemMessagePart;
+
 
 import java.util.*;
 
+/**
+ * General utility methods for SignShop operations and shop management.
+ *
+ * <p>Provides static utilities for sign parsing, location handling, block linking,
+ * operation execution, and player interaction. Works closely with {@link itemUtil}
+ * and {@link SignShopConfig}.</p>
+ *
+ * <h2>Key Functionality:</h2>
+ * <ul>
+ *   <li><b>Sign Parsing:</b> {@link #getOperation(Sign, boolean)} extracts shop type from sign text</li>
+ *   <li><b>Location Handling:</b> {@link #convertLocationToString(Location)} and
+ *       {@link #convertStringToLocation(World, String)} for persistence</li>
+ *   <li><b>Block Linking:</b> {@link #getSignshopBlocksFromList(SignShopPlayer, List, List, List)}
+ *       separates containables (chests) from activatables (levers)</li>
+ *   <li><b>Click Registration:</b> {@link #registerClickedMaterial(PlayerInteractEvent)} tracks
+ *       blocks selected with redstone dust for shop creation</li>
+ *   <li><b>Price Extraction:</b> {@link #parsePrice(String)} parses prices from sign text</li>
+ * </ul>
+ *
+ * <h2>Shop Creation Flow:</h2>
+ * <pre>
+ * 1. Player left-clicks blocks with redstone → registerClickedMaterial()
+ * 2. Player writes sign → getOperation() extracts shop type
+ * 3. Player left-clicks sign with redstone → getSignshopBlocksFromList() links blocks
+ * 4. Shop created and saved
+ * </pre>
+ *
+ * <h2>Thread Safety:</h2>
+ * <p>All methods are static and interact with Bukkit API. Must be called from main thread.</p>
+ *
+ * @see itemUtil
+ * @see SignShopConfig
+ * @see clicks
+ */
 public class signshopUtil {
     private static SignShopConfig signShopConfig;
 
@@ -40,6 +76,13 @@ public class signshopUtil {
         signShopConfig = config;
     }
 
+    /**
+     * Extracts the shop type from a sign's first line (e.g., "[Buy]" → "buy").
+     *
+     * @param sign The sign block to read
+     * @param lowercase If true, returns lowercase; otherwise preserves case
+     * @return Shop type without brackets, or empty string if invalid
+     */
     public static String getOperation(Sign sign, boolean lowercase) {
         if (sign == null)
             return "";
@@ -52,6 +95,12 @@ public class signshopUtil {
         return (lowercase ? temp.toLowerCase() : temp);
     }
 
+    /**
+     * Extracts the shop type from a sign line string.
+     *
+     * @param sSignOperation Sign line text (e.g., "[Buy]")
+     * @return Shop type in lowercase without brackets, or empty string if invalid
+     */
     public static String getOperation(String sSignOperation) {
         if(sSignOperation.length() < 4){
             return "";
@@ -65,6 +114,12 @@ public class signshopUtil {
         Bukkit.getServer().getPluginManager().callEvent(event);
     }
 
+    /**
+     * Parses operation parameters from config operation strings like "Chest{1}" or "cooldown{60,minutes}".
+     *
+     * @param sOperation Operation string with optional {parameters}
+     * @return List where first element is operation name, rest are comma-separated parameters
+     */
     public static List<String> getParameters(String sOperation) {
         List<String> parts = new LinkedList<>();
         if(sOperation.contains("{") && sOperation.contains("}")) {
@@ -97,12 +152,18 @@ public class signshopUtil {
         return ((moneyevent.isCancelled()) || !moneyevent.isHandled());
     }
 
+    /**
+     * Converts a list of operation strings from config into executable SignShopOperation instances.
+     *
+     * @param operation List of operation strings (e.g., ["takePlayerMoney", "giveShopItems"])
+     * @return List of operation items with their parameters, or null if any operation is invalid
+     */
     public static List<SignShopOperationListItem> getSignShopOps(List<String> operation) {
         List<SignShopOperationListItem> SignShopOperations = new LinkedList<>();
         for(String sSignShopOp : operation) {
             List<String> bits = getParameters(sSignShopOp);
-            String op = bits.get(0);
-            bits.remove(0);
+            String op = bits.getFirst();
+            bits.removeFirst();
             SignShopOperation ssOP = getSignShopBlock(op);
             if(ssOP == null)
                 return null;
@@ -120,21 +181,28 @@ public class signshopUtil {
     public static Map<Enchantment, Integer> convertStringToEnchantments(String multiEnchantmentString) {
         Map<Enchantment, Integer> enchantmentsMap = new HashMap<>();
         String[] enchantmentStrings = multiEnchantmentString.split(";");
-        if (enchantmentStrings.length == 0)
-            return enchantmentsMap;
 
         for (String singleEnchantmentString : enchantmentStrings) {
             Enchantment enchantment;
             int enchantmentLevel;
             String[] enchantmentPair = singleEnchantmentString.split("\\|");
-            enchantment = Enchantment.getByKey(NamespacedKey.minecraft(enchantmentPair[0].toLowerCase()));
+
+            // Validate format: must have both enchantment name and level
+            if (enchantmentPair.length < 2) {
+                continue; // Skip malformed enchantment data
+            }
+
+            enchantment = Registry.ENCHANTMENT.get(NamespacedKey.minecraft(enchantmentPair[0].toLowerCase()));
+            if (enchantment == null) {
+                continue; // Skip invalid enchantment
+            }
+
             try {
                 enchantmentLevel = Integer.parseInt(enchantmentPair[1]);
                 enchantmentsMap.put(enchantment, enchantmentLevel);
             } catch (NumberFormatException ignored) {
-
+                // Skip if level is not a valid number
             }
-
         }
         return enchantmentsMap;
     }
@@ -150,10 +218,23 @@ public class signshopUtil {
         return sEnchantments.toString();
     }
 
+    /**
+     * Converts a Location to a string for persistence in sellers.yml.
+     *
+     * @param loc Location to convert
+     * @return String in format "x/y/z/worldname"
+     */
     public static String convertLocationToString(Location loc) {
         return (loc.getBlockX() + "/" + loc.getBlockY() + "/" + loc.getBlockZ() + "/" + loc.getWorld().getName());
     }
 
+    /**
+     * Converts a location string back to a Location object.
+     *
+     * @param sLoc Location string in format "x/y/z" or "x/y/z/worldname"
+     * @param pWorld Default world to use if not specified in string
+     * @return Location object, or null if parsing fails
+     */
     public static Location convertStringToLocation(String sLoc, World pWorld) {
         String[] sCoords = sLoc.split("/");
         if(sCoords.length < 3)
@@ -275,7 +356,7 @@ public class signshopUtil {
 
     public static String validateBankSign(List<Block> clickedBlocks, SignShopPlayer player) {
         List<String> blocklocations = new LinkedList<>();
-        Map<String, String> messageParts = new LinkedHashMap<>();
+        Map<String, Object> messageParts = new LinkedHashMap<>();
 
         if(!Vault.getEconomy().hasBankSupport()) {
             player.sendMessage(signShopConfig.getError("no_bank_support", messageParts));
@@ -328,15 +409,15 @@ public class signshopUtil {
                 return false;
             }
         }
-        if(playerGroups.size() > 0 && seller.isOwner(player)) {
+        if(!playerGroups.isEmpty() && seller.isOwner(player)) {
             player.sendMessage(signShopConfig.getError("restricted_but_owner", null));
             return false;
         } else
-            return (playerGroups.size() > 0 && !player.isOp());
+            return (!playerGroups.isEmpty() && !player.isOp());
     }
 
     public static Boolean lineIsEmpty(String line) {
-        return (line == null || line.length() == 0);
+        return (line == null || line.isEmpty());
     }
 
     public static List<Block> getSignsFromMisc(Seller seller, String miscprop) {
@@ -421,6 +502,13 @@ public class signshopUtil {
             return false;
     }
 
+    /**
+     * Registers a block click for shop creation when player uses the link material.
+     * Adds the block to the click map for later association with a shop sign.
+     *
+     * @param event The player interact event
+     * @return true if the block was a linkable material and was registered
+     */
     public static Boolean registerClickedMaterial(PlayerInteractEvent event) {
         return registerClickedMaterial(event, event.getPlayer(), event.getClickedBlock());
     }
@@ -445,13 +533,17 @@ public class signshopUtil {
                     return false;
                 else {
                     clicks.mClicksPerLocation.put(bClicked.getLocation(), ssPlayer.getPlayer());
-                    Map<String, String> messageParts = new LinkedHashMap<>();
+                    Map<String, Object> messageParts = new LinkedHashMap<>();
                     messageParts.put("!block", itemUtil.formatMaterialName(bClicked));
                     if(bClicked.getState() instanceof InventoryHolder) {
                         List<Block> containables = new LinkedList<>();
                         containables.add(bClicked);
                         ItemStack[] allStacks = itemUtil.getAllItemStacksForContainables(containables);
-                        messageParts.put("!items", (allStacks.length == 0 ? "nothing" : itemUtil.itemStackToString(allStacks)));
+                        if (allStacks.length == 0) {
+                            messageParts.put("!items", "nothing");
+                        } else {
+                            messageParts.put("!items", ItemMessagePart.fromItems(allStacks));
+                        }
                         ssPlayer.sendMessage(signShopConfig.getError("stored_location_containable", messageParts));
                     } else {
                         ssPlayer.sendMessage(signShopConfig.getError("stored_location", messageParts));
@@ -477,6 +569,16 @@ public class signshopUtil {
         return (fPrice * fPricemod);
     }
 
+    /**
+     * Separates player's clicked blocks into containables (chests) and activatables (levers).
+     * Called during shop creation to build the shop's block associations.
+     *
+     * @param ssPlayer The player creating the shop
+     * @param containables Output list for container blocks (chests, barrels, etc.)
+     * @param activatables Output list for activatable blocks (levers, doors, etc.)
+     * @param bClicked The sign block being clicked (excluded from lists)
+     * @return true if successful, false if max chests exceeded or multi-world not allowed
+     */
     public static boolean getSignshopBlocksFromList(SignShopPlayer ssPlayer, List<Block> containables, List<Block> activatables, Block bClicked) {
         boolean multiWorld = false;
         LinkedHashSet<Location> lClicked = getKeysByValue(clicks.mClicksPerLocation, ssPlayer.getPlayer());
@@ -491,7 +593,7 @@ public class signshopUtil {
                 chestCounter++;
                 boolean exceeded = signShopConfig.ExceedsMaxChestsPerShop(chestCounter);
                 if(exceeded) {
-                    Map<String, String> parts = new LinkedHashMap<>();
+                    Map<String, Object> parts = new LinkedHashMap<>();
                     parts.put("!maxAmountOfChests", Integer.toString(signShopConfig.getMaxChestsPerShop()));
                     ssPlayer.sendMessage(signShopConfig.getError("exceeded_max_amount_of_chests_per_shop", parts));
                     return false;
@@ -528,6 +630,13 @@ public class signshopUtil {
         return sellers;
     }
 
+    /**
+     * Finds all shops that would be affected if a block is destroyed.
+     * Checks if block is a shop sign, share sign, restrict sign, or linked container.
+     *
+     * @param block The block being destroyed
+     * @return Map of affected sellers to the type of relationship (sign, misc, attachable)
+     */
     public static Map<Seller, SSDestroyedEventType> getRelatedShopsByBlock(Block block) {
         Map<Seller, SSDestroyedEventType> affectedSellers = new LinkedHashMap<>();
 
@@ -555,6 +664,14 @@ public class signshopUtil {
         return keys;
     }
 
+    /**
+     * Checks if two blocks are within the maximum allowed distance for shop linking.
+     *
+     * @param a First block
+     * @param b Second block
+     * @param maxdistance Maximum distance in blocks (0 or negative = unlimited)
+     * @return true if blocks are within allowed distance
+     */
     public static Boolean checkDistance(Block a, Block b, int maxdistance) {
         if (maxdistance <= 0) {
             return true;
@@ -601,6 +718,13 @@ public class signshopUtil {
         return (doublesAsInts(locA.getX(), locB.getX()) && doublesAsInts(locA.getY(), locB.getY()) && doublesAsInts(locA.getZ(), locB.getZ()));
     }
 
+    /**
+     * Calculates a price modifier based on average item durability.
+     * Used for repair shops to adjust price based on damage level.
+     *
+     * @param stacks Items to calculate durability for
+     * @return Modifier from 0.0 (fully damaged) to 1.0 (pristine), or 1.0 if empty
+     */
     public static double calculateDurabilityModifier(ItemStack[] stacks) {
         if(stacks.length == 0)
             return 1.0f;
@@ -645,8 +769,14 @@ public class signshopUtil {
     }
 
     private static void sendSignUpdate(Player player, Sign sign){
-        //noinspection UnstableApiUsage
-        player.sendBlockUpdate(sign.getLocation(), sign);
+        try {
+            //noinspection UnstableApiUsage
+            player.sendBlockUpdate(sign.getLocation(), sign);
+        } catch (Exception e) {
+            if (signShopConfig.debugging()) {
+                e.printStackTrace();
+            }
+        }
     }
 
 
